--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: objective-c
+osx_image: xcode7.3
+xcode_sdk: iphonesimulator8.1
 # before_install:
     # - brew update
     # - brew install xctool
 script:
-    - xcodebuild clean build test -workspace Example/HMAMessageViewManager.xcworkspace -scheme HMAMessageViewManager-Tests -destination 'platform=iOS Simulator,name=iPhone 6,OS=8.0' ONLY_ACTIVE_ARCH=NO
+    - xcodebuild clean build test -workspace Example/HMAMessageViewManager.xcworkspace -scheme HMAMessageViewManager-Tests ONLY_ACTIVE_ARCH=NO
 
 notifications:
   email:
