--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,4 +2,10 @@ use_frameworks!
 
 target 'HMAMessageViewManager_Example' do
   pod 'HMAMessageViewManager', :path => '../'
+
+  target 'HMAMessageViewManager_Tests' do
+    inherit! :search_paths
+
+    
+  end
 end
