--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ osx_image: xcode7.3
     # - brew update
     # - brew install xctool
 script:
+    - pod --version
     - xcodebuild -showsdks
     - cd Example
     - pod install
