--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
     - xcodebuild -showsdks
     - cd Example
     - pod install
+    - xcrun simctl list
     - xcodebuild clean build test -workspace HMAMessageViewManager.xcworkspace -scheme HMAMessageViewManager-Tests -sdk iphonesimulator11.2 ONLY_ACTIVE_ARCH=NO
 
 notifications:
